GEP-165 Add first skel for the frontend/backend
